修改了“项目详情”页面的“立即投资”按钮颜色，“我要融资”页面的标题颜色，“安全保障”页面的文案。

--- a/loan.html
+++ b/loan.html
@@ -112,11 +112,11 @@
                                 </tr>
                             </table>
                         </div>
-                        <div class="tac mt20 mb20"><a class="png btn3"  href="account-apply-fund-one.html" ><span class="png btn3">车宜贷融资申请</span></a></div>
+                        <div class="tac mt20 mb20"><a class="png btn4"  href="account-apply-fund-one.html" ><span class="png btn4">车宜贷融资申请</span></a></div>
                     </div>
                 </div>
                 <div class="fr bor loan-item">
-                    <h2 class="lh24 bg-yellow">兴业贷</h2>
+                    <h2 class="lh24 bg-green">兴业贷</h2>
                     <div class="loan-item-inner">
                         <div class="borb bor-light sameH">
                             <h4 class="lh36 mt20">申请条件：</h4>
@@ -152,7 +152,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <div class="tac mt20 mb20"><a href="account-apply-fund-two.html" class="png btn3"><span class="png btn3">兴业贷融资申请</span></a></div>
+                        <div class="tac mt20 mb20"><a href="account-apply-fund-two.html" class="png btn4"><span class="png btn4">兴业贷融资申请</span></a></div>
                     </div>
                 </div>
 
