--- a/security.html
+++ b/security.html
@@ -79,7 +79,7 @@
                 <br>
                 <h2 class="lh48 mb10 security-title-3"><span>项目担保保障</span></h2>
                 <div class="security-content mt40">
-	                <p class="ft14 lh24">金仓贷与中利人和担保融资担保有限公司、四川创业融资担保有限公司签订合作协议，为质押车辆提供担保，确保投资人资金安全。</p>
+	                <p class="ft14 lh24">金仓贷与四川创业融资担保有限公司（成立于2004年、注册资金10.7亿元）已达成初步合作意向。前期，四川创业融资担保有限公司将为金仓贷的融资项目提供独立的二次风控审核，为后续金仓贷与其建立长期合作——对车易贷产品提供项目担保打下基础。除此之外，四川创业融资担保有限公司还将为金仓贷违约资产处置提供合法、快速通道，第三方资产处置有效完善了金仓贷的安全保障体系，为投资者甄选安全稳赢的投资项目。</p>
 	            </div>
                 <br>
                 <h2 class="lh48 mb10 security-title-4"><span>风险准备金垫付 违约赔付有保障</span></h2>
