修改我要融资页面的贷种文案。

--- a/loan.html
+++ b/loan.html
@@ -80,35 +80,23 @@
                                 <h4 class="lh36">提供材料：</h4>
                                 <tr>
                                     <td>1</td>
-                                    <td>身份证（原件）</td>
+                                    <td>身份证复印件</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>行驶证（原件）</td>
+                                    <td>个人征信报告</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <td>保险单（原件）</td>
+                                    <td>行驶证</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
-                                    <td>钥 匙 （两把）</td>
+                                    <td>车辆登记证书</td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
-                                    <td>购车发票及完税证明</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>汽  车</td>
-                                </tr>
-                                <tr>
-                                    <td>7</td>
-                                    <td>违章清零</td>
-                                </tr>
-                                <tr>
-                                    <td>8</td>
-                                    <td>登记证</td>
+                                    <td>车辆保险单</td>
                                 </tr>
                             </table>
                         </div>
@@ -132,11 +120,11 @@
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>个人信用报告</td>
+                                    <td>个人征信报告</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <td>经营证明</td>
+                                    <td>营业执照、组织机构代码等</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
@@ -144,11 +132,7 @@
                                 </tr>
                                 <tr>
                                     <td>5</td>
-                                    <td>营业执照、企业机构代码证等</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>质押物</td>
+                                    <td>其它证明材料</td>
                                 </tr>
                             </table>
                         </div>
