--- a/loan.html
+++ b/loan.html
@@ -67,7 +67,7 @@
 
 
         <div class="con">
-            <div class="mt30 pb20">
+            <div>
 
                 <div class="fl bor loan-item">
                     <h2 class="lh24 bg-blue">车宜贷</h2>
@@ -100,7 +100,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <div class="tac mt20 mb20"><a class="png btn4"  href="account-apply-fund-one.html" ><span class="png btn4">车宜贷融资申请</span></a></div>
+                        <div class="tac mt20 mb20"><a class="png btn5"  href="account-apply-fund-one.html" ><span class="png btn5">申请</span></a></div>
                     </div>
                 </div>
                 <div class="fr bor loan-item">
@@ -136,7 +136,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <div class="tac mt20 mb20"><a href="account-apply-fund-two.html" class="png btn4"><span class="png btn4">兴业贷融资申请</span></a></div>
+                        <div class="tac mt20 mb20"><a href="account-apply-fund-two.html" class="png btn3"><span class="png btn3">申请</span></a></div>
                     </div>
                 </div>
 
