reorder the menu.

--- a/index.html
+++ b/index.html
@@ -1,185 +1,185 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv="keywords" content="川商贷">
-  <meta http-equiv="description" content="川商贷">
-  <title>首页-金仓贷</title>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="keywords" content="川商贷">
+        <meta http-equiv="description" content="川商贷">
+        <title>首页-金仓贷</title>
 
-  <link href="css/public.css" type="text/css" rel="stylesheet" />
-  <link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="css/public.css" type="text/css" rel="stylesheet" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
 
-<!--[if IE 6]>
+        <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
+        <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
 
-</head>
+    </head>
 
-<body id="index-body">
+    <body id="index-body">
 
-  <div class="top">
-    <div class="w1100 mc">
-      <div class="fl">欢迎使用金仓贷！</div>
-      <div class="fr topr"><a href="login.html" class="topbtn">登录</a><a href="register.html" class="topbtn">注册</a><a href="help.html">帮助中心</a></div>
-    </div>
-  </div>
+        <div class="top">
+            <div class="w1100 mc">
+                <div class="fl">欢迎使用金仓贷！</div>
+                <div class="fr topr"><a href="login.html" class="topbtn">登录</a><a href="register.html" class="topbtn">注册</a><a href="help.html">帮助中心</a></div>
+            </div>
+        </div>
 
-  <div class="header">
-    <div class="w1100 mc">
-      <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-      <ul class="nav">
-        <li>
-          <a href="index.html">首页</a>
-        </li>
-        <li>
-          <a href="loan.html">我要融资</a>
-        </li>
-        <li class="sub"><span class="sub-icon clearfix"></span>
-          <a href="invest.html">我要投资</a>
-          <ul>
-            <li><a href="invest.html">散标投资</a></li>
-            <li><a href="transfer.html">债权转让</a></li>
-            <li class="sub-nav-icon"><span></span></li>
-          </ul>
-        </li>
-        <li>
-          <a href="account.html">账户管理</a>
-        </li>
-        <li>
-          <a href="security.html">安全保障</a>
-        </li>
-        <li class="sub">
-          <a href="company-intro.html">关于我们</a><span class="sub-icon clearfix"></span>
-          <ul>
-            <li><a href="company-intro.html">公司介绍</a></li>
-            <li><a href="product-intro.html">产品介绍</a></li>
-            <li><a href="qualification.html">企业资质</a></li>
-            <li><a href="contact-us.html">联系我们</a></li>
-            <li class="sub-nav-icon"><span></span></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
+        <div class="header">
+            <div class="w1100 mc">
+                <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+                <ul class="nav">
+                    <li>
+                        <a href="index.html">首页</a>
+                    </li>
+                    <li class="sub"><span class="sub-icon clearfix"></span>
+                        <a href="invest.html">我要投资</a>
+                        <ul>
+                            <li class="sub-nav-icon"><span></span></li>
+                            <li><a href="invest.html">散标投资</a></li>
+                            <li><a href="transfer.html">债权转让</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="loan.html">我要融资</a>
+                    </li>
+                    <li>
+                        <a href="account.html">账户管理</a>
+                    </li>
+                    <li>
+                        <a href="security.html">安全保障</a>
+                    </li>
+                    <li class="sub">
+                        <a href="company-intro.html">关于我们</a><span class="sub-icon clearfix"></span>
+                        <ul>
+                            <li class="sub-nav-icon"><span></span></li>
+                            <li><a href="company-intro.html">公司介绍</a></li>
+                            <li><a href="product-intro.html">产品介绍</a></li>
+                            <li><a href="qualification.html">企业资质</a></li>
+                            <li><a href="contact-us.html">联系我们</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-  <div class="banner">
-    <div class="login_layer">
-      <div class="loginbox">
-        <h5 class="yahei white">登录联付通</h5>
-        <div class="logsel"><label class="png label_1"></label><input type="text" value="用户名" class="text" /></div>
-        <div class="logsel"><label class="png label_2"></label><input type="text" value="登录密码" class="text" /></div>
-        <div class="logsel"><label class="png label_3"></label><input type="text" value="验证码" class="text" style="width:80px;" /><img src="upload/yzm.jpg" class="yzm" /></div>
-        <div class="mt20"><a class="png enbtn">登&nbsp;&nbsp;录</a></div>
-        <div class="mt5 white"><a href="register.html" class="zcmm mr10">注册账号</a>|<a href="#" class="zcmm ml10">忘记密码</a></div>
-      </div>
-    </div>  
-    <!-- 图片切换代码 开始 -->
-    <div id="full-screen-slider">
-      <ul id="slides">
-        <li bgcolor="#f0f0f0" style="background:url('upload/ad01.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
-        <li bgcolor="#5eafe7" style="background:url('upload/ad02.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
-        <li bgcolor="#5db8d5" style="background:url('upload/ad03.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
-      </ul>
-    </div>
-    <div class="slidexia"></div>
-    <!-- 图片切换代码 结束 -->
-  </div>
+        <div class="banner">
+            <div class="login_layer">
+                <div class="loginbox">
+                    <h5 class="yahei white">登录联付通</h5>
+                    <div class="logsel"><label class="png label_1"></label><input type="text" value="用户名" class="text" /></div>
+                    <div class="logsel"><label class="png label_2"></label><input type="text" value="登录密码" class="text" /></div>
+                    <div class="logsel"><label class="png label_3"></label><input type="text" value="验证码" class="text" style="width:80px;" /><img src="upload/yzm.jpg" class="yzm" /></div>
+                    <div class="mt20"><a class="png enbtn">登&nbsp;&nbsp;录</a></div>
+                    <div class="mt5 white"><a href="register.html" class="zcmm mr10">注册账号</a>|<a href="#" class="zcmm ml10">忘记密码</a></div>
+                </div>
+            </div>  
+            <!-- 图片切换代码 开始 -->
+            <div id="full-screen-slider">
+                <ul id="slides">
+                    <li bgcolor="#f0f0f0" style="background:url('upload/ad01.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                    <li bgcolor="#5eafe7" style="background:url('upload/ad02.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                    <li bgcolor="#5db8d5" style="background:url('upload/ad03.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                </ul>
+            </div>
+            <div class="slidexia"></div>
+            <!-- 图片切换代码 结束 -->
+        </div>
 
-  <div class="con" style="margin-top:0;">
+        <div class="con" style="margin-top:0;">
 
-    <div class="tongji clearfix">
-      <dl class="clearfix"><dt class="png tj_tzr"></dt><dd><span class="ft28">928888</span><span style="font-size:16px">位</span><p class="ft18">智慧的投资人加入金仓贷</p></dd></dl>
-      <dl class="clearfix"><dt class="png tj_tzje"></dt><dd><span class="ft28">18.88</span><span style="font-size:16px">亿</span><p class="ft18">累计成功投资金额</p></dd></dl>
-      <dl class="clearfix"><dt class="png tj_zqsy"></dt><dd><span class="ft28">18.88</span><span style="font-size:16px">亿</span><p class="ft18">全站投资人累计赚取收益</p></dd></dl>
-    </div>
-
-
-    <!-- 原先的新闻公告去掉了。这儿改为放一个banner图片。 -->
-    <div class="mid-banner clearfix">
-
-    </div>
-
-    <div class="gonggao mt20">
-      <ul class="list">
-        <li>
-          <a href="us-news.html">关于银行系统维护的公告. 关于银行系统维护的公告. 关于银行系统维护的公告. </a>
-          <div class="time">2014-07-10 </div>
-          <div class="more"><a href="us.html">更多公告</a></div>
-        </li>
-      </ul>
-    </div>
+            <div class="tongji clearfix">
+                <dl class="clearfix"><dt class="png tj_tzr"></dt><dd><span class="ft28">928888</span><span style="font-size:16px">位</span><p class="ft18">智慧的投资人加入金仓贷</p></dd></dl>
+                <dl class="clearfix"><dt class="png tj_tzje"></dt><dd><span class="ft28">18.88</span><span style="font-size:16px">亿</span><p class="ft18">累计成功投资金额</p></dd></dl>
+                <dl class="clearfix"><dt class="png tj_zqsy"></dt><dd><span class="ft28">18.88</span><span style="font-size:16px">亿</span><p class="ft18">全站投资人累计赚取收益</p></dd></dl>
+            </div>
 
 
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
-      <tr>
-        <th class="tal" scope="col" width="20%"><span class="ft24">投资项目</span></th>
-        <th scope="col">年化收益</th>
-        <th scope="col">需求金额</th>
-        <th scope="col">投资进度</th>
-        <th scope="col">期限</th>
-        <th scope="col">担保公司</th>
-        <th scope="col" width="12%">操作</th>
-      </tr>
-      <tr>
-        <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">mini coupe club</a> </td>
-        <td><span class="y-rate">9.5</span>%</td>
-        <td>100万</td>
-        <td><strong class="ui-progressbar-mid ui-progressbar-mid-13"><em>13</em>%</strong></td>
-        <td>6个月</td>
-        <td>四川创业融资担保有限公司</td>
-        <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
-      </tr>
-      <tr>
-        <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
-        <td><span class="y-rate">9.5</span>%</td>
-        <td>100万</td>
-        <td><strong class="ui-progressbar-mid ui-progressbar-mid-55"><em>55</em>%</strong></td>
-        <td>6个月</td>
-        <td>四川创业融资担保有限公司</td>
-        <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
-      </tr>
-      <tr>
-        <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
-        <td><span class="y-rate">99.5</span>%</td>
-        <td>100万</td>
-        <td><strong class="ui-progressbar-mid ui-progressbar-mid-88"><em>88</em>%</strong></td>
-        <td>6个月</td>
-        <td>四川创业融资担保有限公司</td>
-        <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
-      </tr>
-      <tr>
-        <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
-        <td><span class="y-rate">99.5</span>%</td>
-        <td>100万</td>
-        <td><strong class="ui-progressbar-mid ui-progressbar-mid-100"><em>100</em>%</strong></td>
-        <td>6个月</td>
-        <td>四川创业融资担保有限公司</td>
-        <td><a class="tzbtn fr tzbtn2">已满标</a></td>
-      </tr>
-    </table>
+            <!-- 原先的新闻公告去掉了。这儿改为放一个banner图片。 -->
+            <div class="mid-banner clearfix">
 
-    <p class="lh60 ft14 tac" style="border-bottom:2px solid #ccc;"><a href="#" class="c999">查看更多投资项目</a></p>
+            </div>
+
+            <div class="gonggao mt20">
+                <ul class="list">
+                    <li>
+                        <a href="us-news.html">关于银行系统维护的公告. 关于银行系统维护的公告. 关于银行系统维护的公告. </a>
+                        <div class="time">2014-07-10 </div>
+                        <div class="more"><a href="us.html">更多公告</a></div>
+                    </li>
+                </ul>
+            </div>
 
 
-  </div>
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
+                <tr>
+                    <th class="tal" scope="col" width="20%"><span class="ft24">投资项目</span></th>
+                    <th scope="col">年化收益</th>
+                    <th scope="col">需求金额</th>
+                    <th scope="col">投资进度</th>
+                    <th scope="col">期限</th>
+                    <th scope="col">担保公司</th>
+                    <th scope="col" width="12%">操作</th>
+                </tr>
+                <tr>
+                    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">mini coupe club</a> </td>
+                    <td><span class="y-rate">9.5</span>%</td>
+                    <td>100万</td>
+                    <td><strong class="ui-progressbar-mid ui-progressbar-mid-13"><em>13</em>%</strong></td>
+                    <td>6个月</td>
+                    <td>四川创业融资担保有限公司</td>
+                    <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
+                </tr>
+                <tr>
+                    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
+                    <td><span class="y-rate">9.5</span>%</td>
+                    <td>100万</td>
+                    <td><strong class="ui-progressbar-mid ui-progressbar-mid-55"><em>55</em>%</strong></td>
+                    <td>6个月</td>
+                    <td>四川创业融资担保有限公司</td>
+                    <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
+                </tr>
+                <tr>
+                    <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
+                    <td><span class="y-rate">99.5</span>%</td>
+                    <td>100万</td>
+                    <td><strong class="ui-progressbar-mid ui-progressbar-mid-88"><em>88</em>%</strong></td>
+                    <td>6个月</td>
+                    <td>四川创业融资担保有限公司</td>
+                    <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
+                </tr>
+                <tr>
+                    <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
+                    <td><span class="y-rate">99.5</span>%</td>
+                    <td>100万</td>
+                    <td><strong class="ui-progressbar-mid ui-progressbar-mid-100"><em>100</em>%</strong></td>
+                    <td>6个月</td>
+                    <td>四川创业融资担保有限公司</td>
+                    <td><a class="tzbtn fr tzbtn2">已满标</a></td>
+                </tr>
+            </table>
+
+            <p class="lh60 ft14 tac" style="border-bottom:2px solid #ccc;"><a href="#" class="c999">查看更多投资项目</a></p>
+
+
+        </div>
 
 
 
-  <div class="footer">
-    <div style="width:1000px; margin:0 auto">
-      <div style="width:80%" class="tal fl">
-        <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-      </div>
-      <div style="width:20%" class="tar fl">
-        <img src="images/test-qrcode.jpg" style="width:100px;">
-      </div>
-      <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
-      <div class="clearfix"></div>
-    </div>
-  </div>
+        <div class="footer">
+            <div style="width:1000px; margin:0 auto">
+                <div style="width:80%" class="tal fl">
+                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+                </div>
+                <div style="width:20%" class="tar fl">
+                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                </div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
 
-</body>
+    </body>
 </html>
