remove the icon of about us's submenu

--- a/company-intro.html
+++ b/company-intro.html
@@ -71,7 +71,7 @@
             <div id="left" class="bor">
                 <h2 class="mt20 pl20 borb2 lh48">关于我们</h2>
                 <ul class="left_ul">
-                    <li><a href="company-intro.html" class="c900">公司介绍</a><i class="png"></i></li>
+                    <li><a href="company-intro.html" class="c900">公司介绍</a></li>
                     <li><a href="product-intro.html">产品介绍</a></li>
                     <li><a href="qualification.html">企业资质</a></li>
                     <li><a href="contact-us.html">联系我们</a></li>
