--- a/contact-us.html
+++ b/contact-us.html
@@ -74,7 +74,7 @@
                     <li><a href="company-intro.html">公司介绍</a></li>
                     <li><a href="product-intro.html">产品介绍</a></li>
                     <li><a href="qualification.html">企业资质</a></li>
-                    <li><a href="contact-us.html" class="c900">联系我们</a><i class="png"></i></li>
+                    <li><a href="contact-us.html" class="c900">联系我们</a></li>
                 </ul>
             </div> 
 
