--- a/product-intro.html
+++ b/product-intro.html
@@ -72,7 +72,7 @@
                 <h2 class="mt20 pl20 borb2 lh48">关于我们</h2>
                 <ul class="left_ul">
                     <li><a href="company-intro.html">公司介绍</a></li>
-                    <li><a href="product-intro.html" class="c900">产品介绍</a><i class="png"></i></li>
+                    <li><a href="product-intro.html" class="c900">产品介绍</a></li>
                     <li><a href="qualification.html">企业资质</a></li>
                     <li><a href="contact-us.html">联系我们</a></li>
                 </ul>
