--- a/qualification.html
+++ b/qualification.html
@@ -73,7 +73,7 @@
                 <ul class="left_ul">
                     <li><a href="company-intro.html">公司介绍</a></li>
                     <li><a href="product-intro.html">产品介绍</a></li>
-                    <li><a href="qualification.html" class="c900">企业资质</a><i class="png"></i></li>
+                    <li><a href="qualification.html" class="c900">企业资质</a></li>
                     <li><a href="contact-us.html">联系我们</a></li>
                 </ul>
             </div> 
