--- a/index.html
+++ b/index.html
@@ -90,10 +90,16 @@
 
         <div class="con" style="margin-top:0;">
 
-            <div class="tongji clearfix">
-                <dl class="clearfix"><dt class="png tj_tzr"></dt><dd><span class="ft28">928888</span><span style="font-size:16px">位</span><p class="ft18">智慧的投资人加入金仓贷</p></dd></dl>
-                <dl class="clearfix"><dt class="png tj_tzje"></dt><dd><span class="ft28">18.88</span><span style="font-size:16px">亿</span><p class="ft18">累计成功投资金额</p></dd></dl>
-                <dl class="clearfix"><dt class="png tj_zqsy"></dt><dd><span class="ft28">18.88</span><span style="font-size:16px">亿</span><p class="ft18">全站投资人累计赚取收益</p></dd></dl>
+            <div class="tongji row clearfix">
+                <div class="col-xs-5">
+                    <div class="intro">
+                        <h2 class="c900">什么是车宜贷?</h2>
+                        <p class="ft14">金仓贷针对手中持有小额闲置资金的投资客户,推出以机动 车为抵、质押物的投资产品。投资者可通过金仓贷选择自己 喜欢的项目,向融资者借出资金。<a href="security.html" class="c900">了解更多&gt;</a></p>
+                    </div>
+                </div>
+                <div class="col-xs-1"></div>
+                <div class="col-xs-3 mt10"><dt class="png tj_tzje"></dt><dd><span class="ft28">18.88</span><span class="ft16">亿</span><p class="ft14">累计投资金额</p></dd></div>
+                <div class="col-xs-3 mt10"><dt class="png tj_zqsy"></dt><dd><span class="ft28">18.88</span><span class="ft16">亿</span><p class="ft14">xx位车主获得融资</p></dd></div>
             </div>
 
 
@@ -105,6 +111,14 @@
             <div class="gonggao mt20">
                 <ul class="list">
                     <li>
+                        <a href="us-news.html">关于银行系统维护的公告. 关于银行系统维护的公告. 关于银行系统维护的公告. </a>
+                        <div class="time">2014-07-10 </div>
+                        <div class="more"><a href="us.html">更多公告</a></div>
+                    </li><li>
+                        <a href="us-news.html">关于银行系统维护的公告. 关于银行系统维护的公告. 关于银行系统维护的公告. </a>
+                        <div class="time">2014-07-10 </div>
+                        <div class="more"><a href="us.html">更多公告</a></div>
+                    </li><li>
                         <a href="us-news.html">关于银行系统维护的公告. 关于银行系统维护的公告. 关于银行系统维护的公告. </a>
                         <div class="time">2014-07-10 </div>
                         <div class="more"><a href="us.html">更多公告</a></div>
@@ -120,7 +134,7 @@
                     <th scope="col">需求金额</th>
                     <th scope="col">投资进度</th>
                     <th scope="col">期限</th>
-                    <th scope="col">担保公司</th>
+                    <th scope="col">产品类型</th>
                     <th scope="col" width="12%">操作</th>
                 </tr>
                 <tr>
@@ -129,7 +143,7 @@
                     <td>100万</td>
                     <td><strong class="ui-progressbar-mid ui-progressbar-mid-13"><em>13</em>%</strong></td>
                     <td>6个月</td>
-                    <td>四川创业融资担保有限公司</td>
+                    <td>车辆质押</td>
                     <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
                 </tr>
                 <tr>
@@ -138,26 +152,17 @@
                     <td>100万</td>
                     <td><strong class="ui-progressbar-mid ui-progressbar-mid-55"><em>55</em>%</strong></td>
                     <td>6个月</td>
-                    <td>四川创业融资担保有限公司</td>
+                    <td>车辆抵押</td>
                     <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
                 </tr>
                 <tr>
-                    <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
+                    <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">大众朗逸</a> </td>
                     <td><span class="y-rate">99.5</span>%</td>
                     <td>100万</td>
                     <td><strong class="ui-progressbar-mid ui-progressbar-mid-88"><em>88</em>%</strong></td>
                     <td>6个月</td>
-                    <td>四川创业融资担保有限公司</td>
+                    <td>项目担保</td>
                     <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
-                </tr>
-                <tr>
-                    <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
-                    <td><span class="y-rate">99.5</span>%</td>
-                    <td>100万</td>
-                    <td><strong class="ui-progressbar-mid ui-progressbar-mid-100"><em>100</em>%</strong></td>
-                    <td>6个月</td>
-                    <td>四川创业融资担保有限公司</td>
-                    <td><a class="tzbtn fr tzbtn2">已满标</a></td>
                 </tr>
             </table>
 
@@ -171,7 +176,7 @@
         <div class="footer">
             <div style="width:1000px; margin:0 auto">
                 <div style="width:80%" class="tal fl">
-                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+                    <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">重庆海雄名车</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
                     <img src="images/test-qrcode.jpg" style="width:100px;">
